--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2706,6 +2706,12 @@
   "@rp_desc_3": {},
   "rp_desc_4": "The total supply of RP is 1 million.No Pre-mine. No Presale. ",
   "@rp_desc_4": {},
+  "rp_detail_current_level": "",
+  "@rp_detail_current_level": {},
+  "rp_detail_ignore_func": "因量级过低，你错过获得{amountStr} 机会",
+  "@rp_detail_ignore_func": {},
+  "rp_detail_total_func": "红包共 {totalAmountStr} RP",
+  "@rp_detail_total_func": {},
   "rp_empty_staking_record": "No record",
   "@rp_empty_staking_record": {},
   "rp_esmatite_total_holding": "Estimated total holding",
@@ -2922,6 +2928,8 @@
   "@rp_transmit_yesterday": {},
   "rp_type_missed": "Miss",
   "@rp_type_missed": {},
+  "rp_unit": "个",
+  "@rp_unit": {},
   "rp_upgrade_continue_toast": "",
   "@rp_upgrade_continue_toast": {},
   "rp_upgrade_current_func": "当前持币 {currentHoldingStr} RP，燃烧量 {currBurningStr} RP",
@@ -2936,6 +2944,8 @@
   "@rp_upgrade_or_add_holding": {},
   "rp_upgrade_tips_func": "如果你还没有推荐人，系统将为你随机设定一个量级 {levelName} 以上的账户地址为推荐人",
   "@rp_upgrade_tips_func": {},
+  "rp_withdraw_tips_func": "为保证当前量级不下降，请保持持币量大于{holdingStr}RP",
+  "@rp_withdraw_tips_func": {},
   "rp_worth": "Worth",
   "@rp_worth": {},
   "rp_yesterday_rp": "Yesterday's Red Pack",
