[Add] add translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2210,7 +2210,7 @@
   "@official_announcement": {},
   "official_website": "Official Website",
   "@official_website": {},
-  "of_total_supply": "占总供应量",
+  "of_total_supply": "Total supply ratio",
   "@of_total_supply": {},
   "ok": "OK",
   "@ok": {},
@@ -2536,6 +2536,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "redelegation does not exist",
   "@redelegation_not_exist": {},
+  "red_pocket": "Red Pocket",
+  "@red_pocket": {},
   "red_pocket_invitation_together": "Invitation",
   "@red_pocket_invitation_together": {},
   "re_enable_face_id": "Please re-enable Touch ID",
@@ -2684,6 +2686,10 @@
   "@rp_best": {},
   "rp_burn": "Burning",
   "@rp_burn": {},
+  "rp_burn_func": "The {round} round HYN burning completed",
+  "@rp_burn_func": {},
+  "rp_burn_progress_func": "The {id} round",
+  "@rp_burn_progress_func": {},
   "rp_check_staking_tx": "Check staking transaction",
   "@rp_check_staking_tx": {},
   "rp_confirm_retrive": "Confirm retrieve",
@@ -2706,11 +2712,11 @@
   "@rp_desc_3": {},
   "rp_desc_4": "The total supply of RP is 1 million.No Pre-mine. No Presale. ",
   "@rp_desc_4": {},
-  "rp_detail_current_level": "",
+  "rp_detail_current_level": "Current level",
   "@rp_detail_current_level": {},
-  "rp_detail_ignore_func": "因量级过低，你错过获得{amountStr} 机会",
+  "rp_detail_ignore_func": "You miss {amountStr} due to low level",
   "@rp_detail_ignore_func": {},
-  "rp_detail_total_func": "红包共 {totalAmountStr} RP",
+  "rp_detail_total_func": "Total {totalAmountStr} RP",
   "@rp_detail_total_func": {},
   "rp_empty_staking_record": "No record",
   "@rp_empty_staking_record": {},
@@ -2752,11 +2758,11 @@
   "@rp_latest_round": {},
   "rp_level": "RP Level",
   "@rp_level": {},
-  "rp_level_formula": "",
+  "rp_level_formula": "Formula",
   "@rp_level_formula": {},
   "rp_level_record": "Level record",
   "@rp_level_record": {},
-  "rp_level_total_supply_func": "当前已发行 {totalSupplyStr} RP，百分比Y = {promotionSupplyRatioPercent}（{stepPercent}为1梯度）",
+  "rp_level_total_supply_func": "Issued RP {totalSupplyStr} ，Y = {promotionSupplyRatioPercent}（{stepPercent} as 1 measuring unit）",
   "@rp_level_total_supply_func": {},
   "rp_level_up": "Promote",
   "@rp_level_up": {},
@@ -2764,11 +2770,11 @@
   "@rp_level_up_broadcast_sent": {},
   "rp_level_up_first": "Please promote your level",
   "@rp_level_up_first": {},
-  "rp_level_upgrade_func": "提升至该量级需燃烧 {burnStr}RP, 增持{holdingStr}RP",
+  "rp_level_upgrade_func": "To promote to this level you have to burn {burnStr}RP, and hold extra more {holdingStr}RP",
   "@rp_level_upgrade_func": {},
   "rp_level_up_now": "Promote now",
   "@rp_level_up_now": {},
-  "rp_level_zero_toast": "",
+  "rp_level_zero_toast": "Please promote your level to at least level A",
   "@rp_level_zero_toast": {},
   "rp_lucky_pocket": "Lucky draw",
   "@rp_lucky_pocket": {},
@@ -2928,13 +2934,13 @@
   "@rp_transmit_yesterday": {},
   "rp_type_missed": "Miss",
   "@rp_type_missed": {},
-  "rp_unit": "个",
+  "rp_unit": "unit",
   "@rp_unit": {},
-  "rp_upgrade_continue_toast": "",
+  "rp_upgrade_continue_toast": "Invited successfully! ",
   "@rp_upgrade_continue_toast": {},
-  "rp_upgrade_current_func": "当前持币 {currentHoldingStr} RP，燃烧量 {currBurningStr} RP",
+  "rp_upgrade_current_func": "Current holding {currentHoldingStr} RP，burning amount {currBurningStr} RP",
   "@rp_upgrade_current_func": {},
-  "rp_upgrade_detail_func": "(其中：燃烧:{preBurnStr} RP, 持币:{preHoldingStr} RP)",
+  "rp_upgrade_detail_func": "(Burning:{preBurnStr} RP, holding:{preHoldingStr} RP)",
   "@rp_upgrade_detail_func": {},
   "rp_upgrade_level_less_then_current": "Please note that you can't promote to a lower level. ",
   "@rp_upgrade_level_less_then_current": {},
@@ -2942,9 +2948,9 @@
   "@rp_upgrade_no_recommender_warning": {},
   "rp_upgrade_or_add_holding": "Promote or add",
   "@rp_upgrade_or_add_holding": {},
-  "rp_upgrade_tips_func": "如果你还没有推荐人，系统将为你随机设定一个量级 {levelName} 以上的账户地址为推荐人",
+  "rp_upgrade_tips_func": "If you don't have a referral, a users who's above level {levelName} will be you referral.",
   "@rp_upgrade_tips_func": {},
-  "rp_withdraw_tips_func": "为保证当前量级不下降，请保持持币量大于{holdingStr}RP",
+  "rp_withdraw_tips_func": "To avoid dropping to lower level, please keep holding{holdingStr}RP",
   "@rp_withdraw_tips_func": {},
   "rp_worth": "Worth",
   "@rp_worth": {},
