--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -2536,6 +2536,8 @@
   "@recovered_invested_capital": {},
   "redelegation_not_exist": "复抵押不存在",
   "@redelegation_not_exist": {},
+  "red_pocket": "RP 红包",
+  "@red_pocket": {},
   "red_pocket_invitation_together": "一起领红包邀请",
   "@red_pocket_invitation_together": {},
   "re_enable_face_id": "请重新启用面容 ID",
@@ -2684,6 +2686,10 @@
   "@rp_best": {},
   "rp_burn": "燃烧",
   "@rp_burn": {},
+  "rp_burn_func": "第{round}轮 HYN燃烧完成",
+  "@rp_burn_func": {},
+  "rp_burn_progress_func": "第 {id} 轮",
+  "@rp_burn_progress_func": {},
   "rp_check_staking_tx": "查看抵押交易",
   "@rp_check_staking_tx": {},
   "rp_confirm_retrive": "确认取回",
