ethereum local pending tx

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2848,7 +2848,7 @@
   "@rp_retrive_detail": {},
   "rp_retrive_holding": "Retrieve holding token",
   "@rp_retrive_holding": {},
-  "rp_retrive_holding_null": "Available holding amount is null",
+  "rp_retrive_holding_null": "Available holding amount is 0",
   "@rp_retrive_holding_null": {},
   "rp_retrive_hyn": "Click to retrieve all",
   "@rp_retrive_hyn": {},
@@ -3562,7 +3562,7 @@
   "@wallet_test": {},
   "wallet_transaction_finish_tips": "Unable to cancel the transaction request。",
   "@wallet_transaction_finish_tips": {},
-  "wallet_transfer_title": "You have unconfirmed transactions, please wait for the original deal to be successful before launching a new one.",
+  "wallet_transfer_title": "You have an unconfirmed transaction. Are you sure you want to initiate a new transaction?",
   "@wallet_transfer_title": {},
   "wallet_translation_finish_not_speed_tips": "Unable to speed up for current transaction.",
   "@wallet_translation_finish_not_speed_tips": {},
