--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -136,6 +136,8 @@
   "@amount_not_be_negative": {},
   "amount_transfer": "Transfer",
   "@amount_transfer": {},
+  "announcement": "公告",
+  "@announcement": {},
   "annualized_rewards": "APR",
   "@annualized_rewards": {},
   "annualized_yesterday_reward_rate": "Yesterday's annualized reward rate：{rewardRate}",
@@ -346,6 +348,8 @@
   "@cancellation_remortgage_being_processed": {},
   "cancellation_request_being_processed": "Partly cancellation request is processing",
   "@cancellation_request_being_processed": {},
+  "cancel_times": "取消x{cancelTimes}...",
+  "@cancel_times": {},
   "candidate_node": "candidate node",
   "@candidate_node": {},
   "can_extract": "Available",
@@ -396,6 +400,8 @@
   "@change_main_account": {},
   "change_main_account_warning": "You will disconnect all sub accounts with this account and connect it with a new one. Are you sure?",
   "@change_main_account_warning": {},
+  "charge_usdt_waiting_confirmation": "你的快捷充USDT交易正在等待区块链确认...",
+  "@charge_usdt_waiting_confirmation": {},
   "check": "Check",
   "@check": {},
   "check_after_has_wallet": "Please create or import a wallet to continue",
@@ -636,6 +642,8 @@
   "@current_str": {},
   "current_withdrawal_amount_zero": "Withdrawl amount: 0",
   "@current_withdrawal_amount_zero": {},
+  "customize": "自定义",
+  "@customize": {},
   "cycling": "Cycling",
   "@cycling": {},
   "dapp_setting": "DApp Settings",
@@ -1136,6 +1144,8 @@
   "@gas": {},
   "gas_fee": "Transaction Fee",
   "@gas_fee": {},
+  "gas_high_cause_waste_fees": "Gas Price过高，将会造成矿工费浪费",
+  "@gas_high_cause_waste_fees": {},
   "gas_limit": "Gas limit",
   "@gas_limit": {},
   "gas_limit_exceeded_hint": "Gas limit exceeded.",
@@ -1144,6 +1154,8 @@
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "Gas fee exceeds the limit",
   "@gas_limit_too_large": {},
+  "gas_low_affect_confirmation": "Gas Price过低，将会影响交易确认时间",
+  "@gas_low_affect_confirmation": {},
   "gas_price": "The price of gas",
   "@gas_price": {},
   "gas_price_too_low": "Gas fee is too low",
@@ -2126,6 +2138,8 @@
   "@nonce_too_high_hint": {},
   "nonce_too_low_hint": "nonce too low",
   "@nonce_too_low_hint": {},
+  "nonce_value": "Nonce 值",
+  "@nonce_value": {},
   "non_operator_not_update_commission": "not allow to update commission by non-operator",
   "@non_operator_not_update_commission": {},
   "non_secret_open_fail": "Failed to unlock password-free payment",
@@ -2352,12 +2366,16 @@
   "@please_enter_node_description": {},
   "please_enter_node_name": "Please enter node name",
   "@please_enter_node_name": {},
+  "please_enter_nonce_optional": "请输入 Nonce（可选）",
+  "@please_enter_nonce_optional": {},
   "please_enter_postal_code": "Enter postcode",
   "@please_enter_postal_code": {},
   "please_enter_withdraw_amount": "Please enter withdraw amount",
   "@please_enter_withdraw_amount": {},
   "please_input_custom_time_hint": "Please enter a time",
   "@please_input_custom_time_hint": {},
+  "please_input_gas_price": "请输入Gas Price",
+  "@please_input_gas_price": {},
   "please_input_hyn_count": "Enter HYN amount",
   "@please_input_hyn_count": {},
   "please_input_mnemonic": "Please enter mnemonic",
@@ -3156,6 +3174,8 @@
   "@speed_normal": {},
   "speed_slow": "Slow",
   "@speed_slow": {},
+  "speed_up_times": "加速x{speedUpTimes}...",
+  "@speed_up_times": {},
   "spend_manager_hyn": "Commission fee to pay (HYN)：",
   "@spend_manager_hyn": {},
   "sponsor": "Initiator",
