--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -136,6 +136,8 @@
   "@amount_not_be_negative": {},
   "amount_transfer": "金额转移",
   "@amount_transfer": {},
+  "announcement": "公告",
+  "@announcement": {},
   "annualized_rewards": "년간 장려금",
   "@annualized_rewards": {},
   "annualized_yesterday_reward_rate": "昨日年化：{rewardRate}",
@@ -346,6 +348,8 @@
   "@cancellation_remortgage_being_processed": {},
   "cancellation_request_being_processed": "部分撤销请求正处理中!",
   "@cancellation_request_being_processed": {},
+  "cancel_times": "取消x{cancelTimes}...",
+  "@cancel_times": {},
   "candidate_node": "候选节点",
   "@candidate_node": {},
   "can_extract": "인출 가능",
@@ -396,6 +400,8 @@
   "@change_main_account": {},
   "change_main_account_warning": "您将解除该主账户关联的所有子账户并为该账户关联新的主账户，是否继续？",
   "@change_main_account_warning": {},
+  "charge_usdt_waiting_confirmation": "你的快捷充USDT交易正在等待区块链确认...",
+  "@charge_usdt_waiting_confirmation": {},
   "check": "Check",
   "@check": {},
   "check_after_has_wallet": "Please create or import a wallet to continue",
@@ -636,6 +642,8 @@
   "@current_str": {},
   "current_withdrawal_amount_zero": "当前可提金额为0",
   "@current_withdrawal_amount_zero": {},
+  "customize": "自定义",
+  "@customize": {},
   "cycling": "사이클링",
   "@cycling": {},
   "dapp_setting": "Dmap 설정",
@@ -1136,6 +1144,8 @@
   "@gas": {},
   "gas_fee": "네트워크 비용",
   "@gas_fee": {},
+  "gas_high_cause_waste_fees": "Gas Price过高，将会造成矿工费浪费",
+  "@gas_high_cause_waste_fees": {},
   "gas_limit": "燃料限制",
   "@gas_limit": {},
   "gas_limit_exceeded_hint": "비용 한도를 초과하였습니다.",
@@ -1144,6 +1154,8 @@
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "燃料值过大",
   "@gas_limit_too_large": {},
+  "gas_low_affect_confirmation": "Gas Price过低，将会影响交易确认时间",
+  "@gas_low_affect_confirmation": {},
   "gas_price": "燃料价格",
   "@gas_price": {},
   "gas_price_too_low": "交易价格过低",
@@ -2126,6 +2138,8 @@
   "@nonce_too_high_hint": {},
   "nonce_too_low_hint": "nonce너무 낮다",
   "@nonce_too_low_hint": {},
+  "nonce_value": "Nonce 值",
+  "@nonce_value": {},
   "non_operator_not_update_commission": "非创建者不允许更新费率",
   "@non_operator_not_update_commission": {},
   "non_secret_open_fail": "무비번 결제 기능 사용 시작 실패",
@@ -2352,12 +2366,16 @@
   "@please_enter_node_description": {},
   "please_enter_node_name": "Please enter node name",
   "@please_enter_node_name": {},
+  "please_enter_nonce_optional": "请输入 Nonce（可选）",
+  "@please_enter_nonce_optional": {},
   "please_enter_postal_code": "우편번호를 입력하세요",
   "@please_enter_postal_code": {},
   "please_enter_withdraw_amount": "Please enter withdraw amount",
   "@please_enter_withdraw_amount": {},
   "please_input_custom_time_hint": "영업 시간을 기입해 주세요",
   "@please_input_custom_time_hint": {},
+  "please_input_gas_price": "请输入Gas Price",
+  "@please_input_gas_price": {},
   "please_input_hyn_count": "HYN 수를 입력하십시오",
   "@please_input_hyn_count": {},
   "please_input_mnemonic": "복구 단어를 입력하세요",
@@ -3156,6 +3174,8 @@
   "@speed_normal": {},
   "speed_slow": "느린 속도",
   "@speed_slow": {},
+  "speed_up_times": "加速x{speedUpTimes}...",
+  "@speed_up_times": {},
   "spend_manager_hyn": "별도의 관리비 (HYN) 발생",
   "@spend_manager_hyn": {},
   "sponsor": "스폰서",
