--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -136,6 +136,8 @@
   "@amount_not_be_negative": {},
   "amount_transfer": "金額轉移",
   "@amount_transfer": {},
+  "announcement": "公告",
+  "@announcement": {},
   "annualized_rewards": "年化獎勵",
   "@annualized_rewards": {},
   "annualized_yesterday_reward_rate": "昨日年化：{rewardRate}",
@@ -346,6 +348,8 @@
   "@cancellation_remortgage_being_processed": {},
   "cancellation_request_being_processed": "部分撤銷請求正處理中!",
   "@cancellation_request_being_processed": {},
+  "cancel_times": "取消x{cancelTimes}...",
+  "@cancel_times": {},
   "candidate_node": "候選節點",
   "@candidate_node": {},
   "can_extract": "可提取",
@@ -396,6 +400,8 @@
   "@change_main_account": {},
   "change_main_account_warning": "您將解除該主賬戶關聯的所有子賬戶並為該賬戶關聯新的主賬戶，是否繼續？",
   "@change_main_account_warning": {},
+  "charge_usdt_waiting_confirmation": "你的快捷充USDT交易正在等待区块链确认...",
+  "@charge_usdt_waiting_confirmation": {},
   "check": "查看",
   "@check": {},
   "check_after_has_wallet": "請創建或導入錢包後查看",
@@ -636,6 +642,8 @@
   "@current_str": {},
   "current_withdrawal_amount_zero": "當前可提金額為0",
   "@current_withdrawal_amount_zero": {},
+  "customize": "自定义",
+  "@customize": {},
   "cycling": "騎行",
   "@cycling": {},
   "dapp_setting": "DApp設置",
@@ -1136,6 +1144,8 @@
   "@gas": {},
   "gas_fee": "網絡費用",
   "@gas_fee": {},
+  "gas_high_cause_waste_fees": "Gas Price过高，将会造成矿工费浪费",
+  "@gas_high_cause_waste_fees": {},
   "gas_limit": "燃料限制",
   "@gas_limit": {},
   "gas_limit_exceeded_hint": "Gas總量不足.",
@@ -1144,6 +1154,8 @@
   "@gas_limit_reached_hint": {},
   "gas_limit_too_large": "燃料值過大",
   "@gas_limit_too_large": {},
+  "gas_low_affect_confirmation": "Gas Price过低，将会影响交易确认时间",
+  "@gas_low_affect_confirmation": {},
   "gas_price": "燃料價格",
   "@gas_price": {},
   "gas_price_too_low": "交易價格過低",
@@ -2126,6 +2138,8 @@
   "@nonce_too_high_hint": {},
   "nonce_too_low_hint": "隨機值太低",
   "@nonce_too_low_hint": {},
+  "nonce_value": "Nonce 值",
+  "@nonce_value": {},
   "non_operator_not_update_commission": "非創建者不允許更新費率",
   "@non_operator_not_update_commission": {},
   "non_secret_open_fail": "免密支付開啟失敗",
@@ -2352,12 +2366,16 @@
   "@please_enter_node_description": {},
   "please_enter_node_name": "請輸入節點名稱",
   "@please_enter_node_name": {},
+  "please_enter_nonce_optional": "请输入 Nonce（可选）",
+  "@please_enter_nonce_optional": {},
   "please_enter_postal_code": "請輸入郵政編碼",
   "@please_enter_postal_code": {},
   "please_enter_withdraw_amount": "請輸入提幣數量",
   "@please_enter_withdraw_amount": {},
   "please_input_custom_time_hint": "請填寫營業時間時間",
   "@please_input_custom_time_hint": {},
+  "please_input_gas_price": "请输入Gas Price",
+  "@please_input_gas_price": {},
   "please_input_hyn_count": "請輸入HYN數量",
   "@please_input_hyn_count": {},
   "please_input_mnemonic": "請輸入助記詞",
@@ -3156,6 +3174,8 @@
   "@speed_normal": {},
   "speed_slow": "慢",
   "@speed_slow": {},
+  "speed_up_times": "加速x{speedUpTimes}...",
+  "@speed_up_times": {},
   "spend_manager_hyn": "應付管理費(HYN)：",
   "@spend_manager_hyn": {},
   "sponsor": "發起人",
